--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QE'
 - !lcsh 'Geology, Stratigraphic'
+- GITenberg
 title: The World Before the Deluge
 url: http://www.gutenberg.org/ebooks/39723
